<resources>
    <string name="app_name">ExamPrep</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="surround_with_quotes">\"%s\"</string>

    <string name="notification_channel_id">notification_channel_id</string>
    <string name="notification_channel_name">Exam Prep Channel</string>
    <string name="notification_title">Exam Prep</string>

    <string name="button_mirror_text_fragment">Two-way Data Binding Example</string>
    <string name="button_send_user">Send User</string>
    <string name="button_change_user">Change User</string>
    <string name="button_undo">Undo</string>
    <string name="button_recycler_example">Recycler Example</string>
    <string name="button_retrofit_moshi_example">Retrofit + Moshi Example</string>
    <string name="button_clear_shared_prefs">Clear Shared Prefs</string>
    <string name="button_validation_databinding">Validation + Databinding</string>
    <string name="button_validate">Validate</string>
    <string name="button_pager">Pager Example</string>
    <string name="button_snooze">Snooze</string>
    <string name="button_paint_canvas_example">Paint Canvas Example</string>

    <string name="hint_enter_first_name">Enter first name</string>
    <string name="hint_enter_last_name">Enter last name</string>
    <string name="hint_enter_text_above">Enter text above</string>
    <string name="hint_enter_text_to_mirror_below">Enter text to mirror below</string>
    <string name="hint_enter_email">Enter email</string>
    <string name="hint_enter_password">Enter password</string>

    <string name="menu_share">Share first name</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_swap_transformer">Swap Transformer</string>

    <string name="hours_since_install">Days/re-installs since first install: %d</string>

    <string name="message_undo">Restored user names</string>
    <string name="message_valid">Email and password valid</string>
    <string name="message_transformer">Transformer: %s</string>

    <string name="preference_file_key">test_shared_prefs</string>

    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="label_notification_info">Note: this will also send a notification with a pending intent which deep links to the receive user fragment</string>
    <string name="button_launch_intent_for_pdf">Launch Intent for PDF</string>
</resources>
